# gnu_hstbm

./: README
hstbm/: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  NEWS  README  bootstrap  configure.ac
hstbm/doc/: Makefile.am
hstbm/po/: Makefile.am
hstbm/src/: .git_current_version.h  .gitignore  .update_git_current_version  Makefile.am  charclass.c  charclass.h  compiled-pattern.c  compiled-pattern.h  hstbm.c  hstbm.h  lexparse.c  lexparse.h  linebuf.c  linebuf.h  main.c  misc-gettext.h  pattern-lex.h  program-trouble.c  program-trouble.h  search-files.c  search-files.h  tristate.h
hstbm/tests/: Makefile.am  PosixExec.lua  regression.rig  test0  test1  test2
