# Makefile.am for PO subdirectory.
# Copyright (C) 2015 Grouse Software
#
# Copying and distribution of this file, with or without modification,
# are permitted in any medium without royalty provided the copyright
# notice and this notice are preserved.  This file is offered as-is,
# without any warranty.

.PHONY: all check clean all-recursive distclean

all:

check:

clean:

all-recursive:

distclean:

